# bbb_backend

./: .gitignore  README.md  dev_server_manager.py
bookings_service/: pyproject.toml  pyrightconfig.json  run.py
bookings_service/app/: auth.py  database.py  main.py  models.py  schemas.py
bookings_service/app/constants/: service_periods.py
bookings_service/static/: app.js  index.html
menu_service/: pyproject.toml  run.py
menu_service/app/: auth.py  database.py  main.py  models.py  schemas.py
menu_service/app/constants/: menu_items.py
orders_service/: pyproject.toml  run.py
orders_service/app/: auth.py  main.py  models.py  schema.py  schemas.py
reservation_card_service/: main.py  pyproject.toml  pyrightconfig.json  run.py
reservation_card_service/app/: auth.py  database.py  main.py  models.py
rooms_service/: room_seed.py  run.py  shelly.py
rooms_service/app/: auth.py  database.py  main.py  models.py  schemas.py
rooms_service/app/constants/: rooms_and_tables.py
users_service/: admin_seed.py  pyproject.toml  pyrightconfig.json  run.py
users_service/app/: auth.py  database.py  main.py  models.py  schemas.py
users_service/app/constants/: dietary.py
