[project]
name = "bookings-service"
version = "0.1.0"
description = "FastAPI Room/Table Backend"
authors = [
    {name = "josdic1", email = "joshuadicker@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.27",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.1",
    "python-multipart>=0.0.22",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
